--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -26,7 +26,7 @@
                         <Button fx:id="addPaymentButton" layoutX="13.0" layoutY="208.0" mnemonicParsing="false" onAction="#addPayment" prefHeight="26.0" prefWidth="262.0" text="+ Добавить этап оплаты" />
                         <ToggleButton layoutX="200.0" layoutY="245.0" mnemonicParsing="false" text="Р" />
                         <ToggleButton layoutX="224.0" layoutY="245.0" mnemonicParsing="false" text="\$" />
-                        <ToggleButton layoutX="248.0" layoutY="245.0" mnemonicParsing="false" text="Э" />
+                        <ToggleButton layoutX="248.0" layoutY="245.0" mnemonicParsing="false" text="€" />
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Валюта :" />
                         <Button fx:id="createButton" layoutX="13.0" layoutY="278.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="262.0" text="Сформировать" />
                     </children>
