--- a/src/sample/RoomName.fxml
+++ b/src/sample/RoomName.fxml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="362.0" prefWidth="422.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RoomNameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="362.0" prefWidth="422.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RoomNameController">
     <children>
-        <Button layoutX="116.0" layoutY="31.0" mnemonicParsing="false" onAction="#addRoomName" text="Добавить" />
         <Button layoutX="227.0" layoutY="31.0" mnemonicParsing="false" onAction="#deleteRoomElement" text="Удалить" />
-        <Button fx:id="saveRoom" layoutX="169.0" layoutY="295.0" mnemonicParsing="false" onAction="#saveRoomElement" text="Сохранить" />
-        <TableView fx:id="roomTableView" layoutX="27.0" layoutY="73.0" prefHeight="200.0" prefWidth="358.0">
+        <Button fx:id="saveRoom" layoutX="137.0" layoutY="31.0" mnemonicParsing="false" text="Сохранить" />
+        <TableView fx:id="roomTableView" layoutX="27.0" layoutY="73.0" onMouseClicked="#On_tabCalculatorClickedActionRoom" prefHeight="200.0" prefWidth="358.0">
             <columns>
-                <TableColumn fx:id="colNameRoom" onEditCommit="#onEditChanged" prefWidth="184.79998397827148" text="Помещение" />
-                <TableColumn fx:id="colYardageRoom" prefWidth="99.19996643066406" text="Площадь" />
-                <TableColumn fx:id="colBathroom"  prefWidth="71.20001220703125" text="Санузел" />
+                <TableColumn fx:id="colNameRoom" prefWidth="185.0" text="Помещение" />
+                <TableColumn fx:id="colAreaRoom" prefWidth="100.0" text="Площадь" />
+                <TableColumn fx:id="colSelectBathRoom" prefWidth="70.0" text="Санузел" />
             </columns>
         </TableView>
     </children>
