--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController" >
+<TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController" >
     <tabs>
         <Tab text="Проект">
             <content>
@@ -384,13 +384,8 @@
                 </AnchorPane>
             </content>
         </Tab>
-        <Tab text="Сантехника">
+        <Tab fx:id="plumbing" text="Сантехника">
             <content>
-                <FlowPane fx:id="plumbing" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-
-               </children>
-                </FlowPane>
             </content>
         </Tab>
         <Tab text="Мебель">
